updated to docarray

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit
-langchain
-langchain-google-genai
-langchain-community
-chromadb
-sentence-transformers
-pypdf
 python-dotenv
+langchain
+langchain-community
+langchain-google-genai
+pypdf
+sentence-transformers
+docarray
