--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-streamlit
-python-dotenv
-langchain
-langchain-community
-langchain-google-genai
-pypdf
-sentence-transformers
-docarray
+streamlit==1.26.1
+python-dotenv==1.0.1
+langchain==0.3.2
+langchain-community==0.0.40
+langchain-google-genai==0.1.3
+langchain-text-splitters==0.0.8
+pypdf==3.20.1
+sentence-transformers==2.2.2
+docarray==0.32.3
+torch==2.3.0
