--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit
-python-dotenv
-langchain
-langchain-community
-langchain-google-genai
-pypdf
-sentence-transformers
-docarray
+streamlit==1.26.1
+python-dotenv==1.0.1
+langchain==0.3.2
+langchain-community==0.3.31
+langchain-google-genai==3.0.0
+langchain-text-splitters==0.3.11
+pypdf==3.20.1
+sentence-transformers==2.2.2
+docarray==0.32.3
