--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ langchain-text-splitters==0.3.11
 pypdf==3.20.1
 sentence-transformers==2.2.2
 docarray==0.32.3
+torch==2.3.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
