--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ langchain==0.3.2
 langchain-community==0.3.31
 langchain-google-genai==3.0.0
 langchain-text-splitters==0.3.11
-pypdf==3.20.1
+pypdf==6.1.3
 sentence-transformers==2.2.2
 docarray==0.32.3
-torch==2.3.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
+torch==2.3.0+cpu
