--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,5 @@ langchain-text-splitters==0.3.11
 pypdf==6.1.3
 sentence-transformers==2.2.2
 docarray==0.40.0
-torch==2.3.0+cpu
+--find-links https://download.pytorch.org/whl/cpu/torch_stable.html
+torch==2.9.0+cpu
