--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,4 @@ pypdf==6.1.3
 sentence-transformers==2.2.2
 docarray==0.40.0
 torch==2.9.0
-rich==14.2.0
+rich==13.0.0  # must be <14 for Streamlit 1.26.1
