--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
-streamlit==1.26.1
+# Streamlit
+streamlit==1.50.0
+
+# Environment variables
 python-dotenv==1.0.1
+
+# LangChain
 langchain==0.3.27
 langchain-community==0.3.31
 langchain-google-genai==3.0.0
 langchain-text-splitters==0.3.11
+
+# PDF and embeddings
 pypdf==6.1.3
 sentence-transformers==2.2.2
 docarray==0.40.0
 torch==2.9.0
-rich==13.0.0  # must be <14 for Streamlit 1.26.1
+
+# Rich (compatible with Streamlit 1.50.0)
+rich==14.2.0
