--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 streamlit==1.26.1
 python-dotenv==1.0.1
-langchain==0.3.2
+
+langchain>=1.0.0,<2.0.0
 langchain-community==0.3.31
 langchain-google-genai==3.0.0
 langchain-text-splitters==0.3.11
+
 pypdf==6.1.3
 sentence-transformers==2.2.2
-docarray==0.32.3
-torch==2.3.0+cpu
+docarray==0.40.0
+torch==2.9.0+cpu
+
+rich>=10.14.0,<14
